<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mnpd.plantdetector.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/textred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="83dp"
        android:id="@+id/textView1"
        android:textSize="13sp"
        android:textIsSelectable="false"
        android:layout_above="@+id/captureButton"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textyellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColorLink="?attr/actionMenuTextColor"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:textIsSelectable="false"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/mal"
        android:id="@+id/imageView"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginLeft="3dp"
        android:cropToPadding="false"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"/>

    <TextView
        android:text="@string/textgreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="13sp"
        android:textIsSelectable="false"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@+id/imageView"
        android:layout_toStartOf="@+id/textView3"
        android:layout_marginEnd="10dp" />


    <Button
        android:text="@string/cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cal"
        android:backgroundTint="@android:color/holo_green_light"
        android:background="@android:drawable/editbox_background_normal"
        android:visibility="visible"
        android:textColorLink="@android:color/holo_purple"
        android:layout_marginBottom="19dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/camera_button"
        android:layout_height="wrap_content"
        android:id="@+id/captureButton"
        android:textColorLink="@android:color/holo_purple"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="@android:color/holo_green_light"
        android:layout_width="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/cal"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/toGallery"
        android:layout_marginEnd="7dp" />

    <Button
        android:text="@string/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toGallery"
        android:backgroundTint="@android:color/holo_green_light"
        android:background="@android:drawable/editbox_background_normal"
        android:visibility="visible"
        android:textColorLink="@android:color/holo_purple"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_alignBaseline="@+id/captureButton"
        android:layout_alignBottom="@+id/captureButton"
        android:layout_alignParentEnd="true" />

    <Button

        android:id="@+id/Standards"
        android:layout_width="5dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/mal2"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginBottom="179dp"
        android:layout_marginStart="9dp"
        android:layout_alignBottom="@+id/imageView" />

    <TextView
        android:text="@string/hundred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yellowPercent"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/greenPercent"
        android:layout_alignBottom="@+id/greenPercent"
        android:layout_alignEnd="@+id/imageView" />

    <TextView
        android:text="@string/hundred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redPercent"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="28dp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/hundred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/greenPercent"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/redPercent"
        android:layout_alignBottom="@+id/redPercent"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

